k8s/repair-now/templates/ingress-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: repair-now-com-ing
  annotations:
    cloud.google.com/backend-config: "com-backendconfig"
    kubernetes.io/ingress.global-static-ip-name: repair-now-com-ip
    networking.gke.io/managed-certificates: managed-cert
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: com-gateway-svc
                port:
                  number: 3005
